apps/aiometadata/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stremio
  labels:
    name: stremio
