apps/aiometadata/aiometadata-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aiometadata
  namespace: stremio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - aiometadata.erix-homelab.site
    secretName: erix-homelab-site-tls
  rules:
  - host: aiometadata.erix-homelab.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aiometadata
            port:
              number: 3232
